--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>poKeapi</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 <body>
-   Edwin Sebastian A/N
+<nav>
+    <button onclick="Home()">Home</button>
+    <button onclick="informacion()">informacion</button>
+    <button onclick="Capturadosoriginal()">Capturados</button>
+    <button onclick="Favoritos()">Favoritos</button>
+</nav>
+
+<div id="root">
+    <!-- aqui se agrega lo que hagamos en js -->
+</div>
+
+<!-- ✅ Scripts deben ir aquí, fuera del <nav> -->
+<script src="Js/Home.js"></script>
+<script src="Js/capturados.js"></script>
+<script src="Js/favoritos.js"></script>
+<script src="Js/informacion.js"></script>
+<script src="Js/pokemon.js"></script>
+<script src="Js/conexion.js"></script>
 </body>
 </html>
