--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
 <!-- ✅ Scripts deben ir aquí, fuera del <nav> -->
 <script src="Js/Home.js"></script>
-<script src="Js/capturados.js"></script>
-<script src="Js/favoritos.js"></script>
-<script src="Js/informacion.js"></script>
-<script src="Js/pokemon.js"></script>
-<script src="Js/conexion.js"></script>
+<script src="Js/Capturados.js"></script>
+<script src="Js/Favoritos.js"></script>
+<script src="Js/Informacion.js"></script>
+<script src="Js/Pokemon.js"></script>
+<script src="Js/Conexion.js"></script>
 </body>
    <script>
 
